Admin Ride Controller changes
