# api.yml
@@ -395,7 +395,7 @@ paths:
       responses:
         '200':
           description: Ok
-  /rides:
+  /ride:
     get:
       tags: 
         - TicketsBooking
@@ -403,6 +403,7 @@ paths:
         - $ref: '#/components/parameters/from'
         - $ref: '#/components/parameters/to'
         - $ref: '#/components/parameters/date'
+        - $ref: '#/components/parameters/routeId'
       responses:
         '200':
           description: List of matching Rides
@@ -459,6 +460,13 @@ components:
       name: id
       in: path
       description: Numeric ID of related object
+      required: true
+      schema:
+        type: integer
+    routeId:
+      name: route
+      in: path
+      description: Route id
       required: true
       schema:
         type: integer
@@ -626,6 +634,8 @@ components:
           $ref: '#/components/schemas/Train'
         FreeTickets:
           type: integer
+        Price:
+          type: integer
     RideForm:
       type: object
       properties:
@@ -634,6 +644,8 @@ components:
         StartTime:
           type: string
         TrainId:
+          type: integer
+        Price:
           type: integer
     Ticket:
       type: object
