# server/ModelsDTO/RidePostDTO.cs
@@ -1,0 +1,10 @@
+namespace Server.ModelsDTO
+{
+    public class RidePostDTO
+    {
+        public int RouteId { set; get; }
+        public string StartTime { set; get; }
+        public int TrainId { set; get; }
+        public int Price { set; get; }
+    }
+}
